--- a/UR Investing/UR Investing/Views/Members/Delete.cshtml
+++ b/UR Investing/UR Investing/Views/Members/Delete.cshtml
@@ -12,6 +12,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Position.description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Position.description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Team.description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Team.description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.name)
         </dt>
 
@@ -33,14 +49,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.biography)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.resumePath)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.resumePath)
         </dd>
 
     </dl>
