--- a/UR Investing/UR Investing/Views/Members/Edit.cshtml
+++ b/UR Investing/UR Investing/Views/Members/Edit.cshtml
@@ -42,10 +42,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.resumePath, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.teamName, "teamName", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.resumePath, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.resumePath, "", new { @class = "text-danger" })
+                @Html.DropDownList("teamName", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.teamName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.positionName, "positionName", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("positionName", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.positionName, "", new { @class = "text-danger" })
             </div>
         </div>
 
