--- a/UR Investing/UR Investing/Views/Members/Index.cshtml
+++ b/UR Investing/UR Investing/Views/Members/Index.cshtml
@@ -15,13 +15,13 @@
             @Html.DisplayNameFor(model => model.name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.picturePath)
+            @Html.DisplayNameFor(model => model.Position.name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Team.name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.biography)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.resumePath)
         </th>
         <th></th>
     </tr>
@@ -32,13 +32,13 @@
             @Html.DisplayFor(modelItem => item.name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.picturePath)
+            @Html.DisplayFor(modelItem => item.Position.name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Team.name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.biography)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.resumePath)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
