--- a/UR Investing/UR Investing/Views/Shared/_Layout.cshtml
+++ b/UR Investing/UR Investing/Views/Shared/_Layout.cshtml
@@ -1,16 +1,24 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    @{string siteName = "Ur Investing";}
+    @{
+        string siteName = "UR Investing";
+    }
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - @siteName</title>
+   @*
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+*@
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/dropdown-submenu.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/site.css" />
 
+    @Scripts.Render("~/bundles/modernizr")
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
@@ -18,14 +26,44 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> <!-- Drop down menu 3 bar icon -->
+            
+                @*
                 @Html.ActionLink(siteName, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                *@
+                <div class="navbar-brand">
+                    <a href="@Url.Action("Index", "Home")"><img alt="@siteName" src="~/Content/Files/Brand.jpg" class="navbar-brand"/></a>
+                </div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li role="presentation">@Html.ActionLink("About", "About", "Home")</li>
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="/page.html">
+                            Dropdown <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                            <li><a href="#">Some action</a></li>
+                            <li><a href="#">Some other action</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-submenu">
+                                <a tabindex="-1" href="#">Hover me for more options</a>
+                                <ul class="dropdown-menu">
+                                    <li><a tabindex="-1" href="#">Second level</a></li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#">Even More..</a>
+                                        <ul class="dro  pdown-menu">
+                                            <li><a href="#">3rd level</a></li>
+                                            <li><a href="#">3rd level</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Second level</a></li>
+                                    <li><a href="#">Second level</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Members", "Index", "Members")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -34,20 +72,29 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        
     </div>
 
-    <div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="navbar navbar-fixed-bottom hidden-xs">
         <div class="container">
-            <div class="navbar-header">
-                <footer>
-                    <p>&copy; @DateTime.Now.Year - @siteName</p>
-                </footer>
-            </div>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="https://www.facebook.com/urInvesting" target="_blank">Facebook</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/UR_Investing" target="_blank">Twitter</a>
+                </li>
+            </ul>
+            <ul class="navbar-right">
+                <li>
+                    <p class="navbar-text">&copy; @DateTime.Now.Year - @siteName</p>
+                </li>
+            </ul>
         </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/dropzone")
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
