--- a/UR Investing/UR Investing/Views/Shared/_Layout.cshtml
+++ b/UR Investing/UR Investing/Views/Shared/_Layout.cshtml
@@ -17,25 +17,26 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 
-<body>
-    <nav class="container navbar navbar-fixed-top">
+<body class="background-light">
+    <nav class="container-fluid navbar navbar-fixed-top background-medium">
+        <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> <!-- Drop down menu 3 bar icon -->
-            
+
                 <div class="navbar-brand">
                     <!-- UR Investing Logo and navigation link -->
-                    <a href="@Url.Action("Index", "Home")"><img alt="@siteName" src="~/Content/Files/Brand.jpg" class="navbar-brand-image"/></a>
+                    <a href="@Url.Action("Index", "Home")"><img alt="@siteName" src="~/Content/Files/Brand.jpg" class="navbar-brand-image" /></a>
                 </div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav nav-pills">
 
                     <!-- Home navigation link-->
-                    <li class=@(ViewBag.currentPage == "Home" ? "active" : "")>@Html.ActionLink("Home", "Index", "Home")</li> 
+                    <li class=@(ViewBag.currentPage == "Home" ? "active" : "")>@Html.ActionLink("Home", "Index", "Home")</li>
 
                     <!-- About navigation link-->
                     <li class=@(ViewBag.currentPage == "About" ? "active" : "")>@Html.ActionLink("About", "Index", "About")</li>
@@ -79,26 +80,27 @@
 
                 @Html.Partial("_LoginPartial")
             </div>
+        </div>
     </nav>
 
-    <div class="container body-content">
+    <div class="container body-content background-white round-top">
         @RenderBody()
     </div>
 
-    <div class="navbar navbar-fixed-bottom hidden-xs container">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="https://www.facebook.com/urInvesting" target="_blank">Facebook</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/UR_Investing" target="_blank">Twitter</a>
-                </li>
-            </ul>
-            <ul >
-                <liclass ="navbar-right">
-                    <p class="navbar-text">&copy; @DateTime.Now.Year - @siteName</p>
-                </liclass>
-            </ul>
+    <div class="navbar container background-dark round-bottom">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="https://www.facebook.com/urInvesting" target="_blank">Facebook</a>
+            </li>
+            <li>
+                <a href="https://twitter.com/UR_Investing" target="_blank">Twitter</a>
+            </li>
+        </ul>
+        <ul class="nav nabar-nav navbar-right">
+            <li>
+                <p class="navbar-text">&copy; @DateTime.Now.Year - @siteName</p>
+            </li>
+        </ul>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
