--- a/UR Investing/UR Investing/Views/Home/Index.cshtml
+++ b/UR Investing/UR Investing/Views/Home/Index.cshtml
@@ -12,7 +12,14 @@
 </div>
 
 <div class="row">
-    <script src="http://www.macroaxis.com/widgets/fussion.jsp?t=42"></script>
+    <script src="http://widgets.freestockcharts.com/js/jquery-1.3.1.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/ticker.js" type="text/javascript"></script> <link href="~/Content/ticker.css" rel="stylesheet" type="text/css" />
+    <script>
+        var gainerTick = new WBIHorizontalTicker('gainers');
+        gainerTick.start();
+        var loserTick = new WBIHorizontalTicker('losers');
+        loserTick.start();
+    </script> <!-- End Scrolling Ticker Widget -->
 </div>
 
 <div class="row">
